--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,26 +1,26 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
-html,body{
+html,
+body {
   width: 100%;
   height: 100%;
-  font-family: "微软雅黑",Microsoft YaHei;
+  font-family: "微软雅黑", Microsoft YaHei;
   box-sizing: border-box;
   min-width: 1360px;
   position: relative;
 }
-.container {
-  .left-nav{
-    width: 300px;
-    height: 100vh;
-    background-image: url("../assets/images/u316.png");
-    background-size: cover;
-    float: left;
-  }
-  .right-content{
-    width: calc(100% - 300px);
-    float: right;
-  }
-}
-
+// .container {
+//   .left-nav{
+//     width: 300px;
+//     height: 100vh;
+//     background-image: url("../assets/images/u316.png");
+//     background-size: cover;
+//     float: left;
+//   }
+//   .right-content{
+//     width: calc(100% - 300px);
+//     float: right;
+//   }
+// }
